# code-leap-test

./: README.md  pyproject.toml
codeleap/codeleap/: asgi.py  settings.py  urls.py  wsgi.py
codeleap/teste/: models.py
codeleap/teste/api/: serializers.py  viewset.py
